grammar.txt
program    -> declaration* EOF ;

declaration -> variable_decl | statement ;

variable_decl -> "var" IDENTIFIER ( "=" expression )? ";" ;

statement    -> expr_stmt | print_stmt | block | if_stmt ;
block        -> "{" declaration* "}" ;
expr_stmt    -> expression ";" ;
print_stmt   -> "print" expression ";" ;
if_stmt      -> "if" "(" expression ")" statement ( "else" statement )? ;
  
expression   -> comma ;
comma        -> ternary ( "," ternary )* ;
assignment   -> IDENTIFIER "=" assignment | ternary ;
ternary      -> logical_or "?" logical_or ":" logical_or | logical_or ; //TODO can the evaluation parts call recursive ternary? 
logical_or   -> logical_and ( "or" logical_and )* ;
logical_and  -> equality ( "and" equality )* ;
equality     -> comparison ( ("!=" | "==") comparison )* ;
comparison   -> term ( (">" | ">=" | "<" | "<=") term )* ;
term         -> factor ( ("-" | "+") factor )* ;
factor       -> unary ( ("*" | "/") unary )* ;
unary        -> ("!" | "-") unary | primary ;
primary      -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" | IDENTIFIER ;
